--- a/contenido/deportes/surf.html
+++ b/contenido/deportes/surf.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="/style.css">
     <title>Rush Evo</title>
 </head>
-<style>
-    img{
-        width: 50%;
-
+<style type="text/css">
+    .naci{
+        padding: 5%;
+        size-adjust:initial;
+        width: 40%;
+        padding-top: 2%;
     }
     .content{
         display: flex;
@@ -18,6 +20,13 @@
         align-items: center;
         text-align: justify;
     }
+    .contenido {
+            display: flex;
+            padding-top: 5%;
+            padding-bottom: 5%;
+            flex-wrap: wrap;
+            box-sizing: border-box;
+        }   
 </style>
 <body>
 
@@ -38,49 +47,61 @@
     <!-- Sección de Contenido -->
     <section class="content">
         <img src="/img/banners/surf-banner-large.png" alt="" class="banner">
-        <h1>SURF</h1>
-        <p>EL Surf, el deporte extremo por excelencia del mundo acuático. Se puede decir que consiste en subirte en una tabla y navegar sobre las olas que nos ofrece el mar, 
-            pero no es tan simple como puede entenderse esas simples palabras. Como cualquier otro deporte requiere de técnica y mucha práctica para poder dominar la tabla 
-            sobre el rugido del agua.
-        </p>
-        <img class="naci" src="/img/surf.jpeg" alt="">
-        <h2>Historia</h2>
-        <p>El surf era una práctica común entre los habitantes de las islas hawaianas desde el siglo XV. 
-            Servía para que los líderes tribales que se enfrentaban al mar para demostrar su poder y superioridad. 
-            Surfeaban con tablas de gran tamaño, llamadas Papa-he-nalu. Se cortaban del tronco de un árbol según un ritual antiguo.
-             Los polinesios se retaban en duelos de surf, y el ganador obtenía un mejor lugar en la tribu. 
-             El surf era una actividad espiritual para los polinesios, profundamente arraigada en su religión y cultura.
-        </p>
-        <p>
-            La destrucción de la cultura del surf hawaiana
-            La publicación de libros sobre los viajes de Cook y King tras su regreso a Europa atrajo a 
-            exploradores y misioneros a las islas. Su llegada, por desgracia, provocó la aparición
-            en las islas de enfermedades hasta entonces desconocidas, como la sífilis, la tuberculosis,
-            etc. Según algunas estimaciones, la llegada de los colonizadores europeos provocó la muerte de casi el 90% de la población nativa hawaiana.
-        </p>
-        <h2>El padre del surf moderno</h2>
-        <img class="padre" src="/img/padre.jpg" alt="">
-        <p>Duke Kahanamoku popularizó este deporte en 1912. 
-            Duke fue uno de los pioneros del surf. 
-            Como apasionado surfista hawaiano y plusmarquista olímpico de natación, 
-            sus demostraciones en California causaron mucha más expectación que las de Freeth. 
-            Gracias a su fama en Hollywood y a su extraordinaria técnica de surf en aquella época, 
-            popularizó realmente este deporte. Duke es considerado el padre del surf moderno. 
-            Su aparición en las playas de California marcó el inicio de la era del surf estadounidense.
-        </p>
-        <H2>Clasificación</H2>
-        <p>
-            Uno de los parámetros que podemos usar para clasificar el surf es justamente el tamaño de la tabla, y esto nos lleva a las siguientes dos variantes: 
-        </p>
-        <img src="/img/tablas.jpg" alt="">
-        <p>
-            Shortboard: también conocido como surf de tabla corta. 
-            Con medidas que van desde 1,5 a 2,1 metros, permite a los deportistas realizar un mayor número de maniobras, pero se cobran en velocidad;
-            <br>
-            Longboard: otro nombre que recibe es surf de tablón. 
-            El rango de medidas comienza a partir de los 2,75 metros, y superan a las anteriores también en anchura y grosor. 
-            Puestas en acción, dan lugar a maniobras de mayor suavidad y a una velocidad superior.
-        </p>
+            <h1>SURF</h1>
+            <img class="naci" src="/img/surf.jpeg" alt="">
+            <p>EL Surf, el deporte extremo por excelencia del mundo acuático. Se puede decir que consiste en subirte en una tabla y navegar sobre las olas que nos ofrece el mar, 
+                pero no es tan simple como puede entenderse esas simples palabras. Como cualquier otro deporte requiere de técnica y mucha práctica para poder dominar la tabla 
+                sobre el rugido del agua.
+            </p>
+        <section class="contenido">
+
+            <article class="articulo">
+                <img src="/img/surfbase.jpg" alt="">
+                <h1>Surf base</h1>
+                <br>
+                <p> Es la escalada sin cuerda ni seguros ni ningún tipo de protección que pueda salvar al escalador en caso de caída. En casi todos los casos en los que el escalador o escaladora realiza un solo integral.
+                </p>
+            </article>
+
+            <article class="articulo">
+                <img src="/img/Shortboard Board.jpg" alt="">
+                <h1>Shortboard Board</h1>
+                <br>
+                <p>Se trata del surf base legendario del cual se derivaron las demás clasificaciones. Básicamente, consiste en remar, levantarse y hacer maniobras, al mismo tiempo en que la tabla se desliza en armonía con las olas hasta que se extinga.
+
+                </p>
+            </article>
+
+            <article class="articulo">
+                <img src="/img/Funboard.jpg" alt="">
+                <h1>Funboard</h1>
+                <br>
+                <p>Se trata de unas tablas de surf recomendadas para empezar, debido a que tienen las medidas perfectas para los principiantes, siendo de 1,8 a 2,4m de longitud. </p>
+            </article>
+
+            <article class="articulo">
+                <img src="/img/Longboard.jpg" alt="">
+                <h1>Longboard</h1>
+                <br>
+                <p>Hablamos de tablas que cuentan con una longitud de 2,4 a 3,6 m, siendo de mayor espesor y estabilidad en el agua. 
+                </p>
+            </article>
+
+            <article class="articulo">
+                <img src="/img/Windsurf.jpg" alt="">
+                <h1>Windsurf</h1>
+                <br>
+                <p>Aquí se combina un aparejo o vela con una tabla muy similar a la de surf. La vela se articulará en pie de mástil, debido a lo cual la rotación y dirección implica una maleabilidad importante.
+                </p>
+            </article>
+
+            <article class="articulo">
+                <img src="/img/Kite surf.jpg" alt="">
+                <h1>Kite surf</h1>
+                <br>
+                <p>Se trata de un tipo de surf único que aprovecha las fuerzas del viento mediante una cometa de tracción, la cual está sujeta al cuerpo del individuo mediante un arnés que te será útil para desplazarlo en la tabla sobre el agua, aún sin oleajes.</p>
+            </article>
+        </section>
     </section>
 
     
