--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -8,11 +8,6 @@
     <title>Rush Evo</title>
 </head>
 <style type="text/css">
-    body{
-        justify-content: center;
-        align-items: center;
-    }
-
     .content h1{
         font-size: 40px;
         text-transform: uppercase;
@@ -28,16 +23,21 @@
         font-size: 30px;
         text-transform: uppercase;
         padding-top: 70px;
+        text-align: center;
     }
 
     .content2 p{
         color: white;
-        position: relative;
         left: 300px;
+    }
+
+    .content3 textarea{
+        text-align: center;
     }
 
     .content3 h4{
         padding-top: 40px;
+        text-align: center;
     }
 
     .content4 h4{
@@ -51,6 +51,7 @@
 
     .content5 p{
         color: white;
+        text-align: center;
     }
 </style>
 
@@ -100,9 +101,9 @@
 
                 <label for="Email">Email</label>
                 <input id="Email" name="Email" type="text" placeholder="Ingrese su Email">
-            </form>
 
-            <form action="">
+
+            
                 <label for="celular">celular</label>
                 <input id="celular" name="celular" type="text" placeholder="Ingrese su numero">
 
@@ -111,9 +112,7 @@
 
                 <label for="Ciudad">Ciudad</label>
                 <input id="Ciudad" name="Ciudad" type="text" placeholder="Ingrese su Ciudad">
-            </form>
 
-            <form action="">
                 <label for="Pais">Pais</label>
                 <input id="Pais" name="Pais" type="text" placeholder="Ingrese su Pais">
 
@@ -139,7 +138,7 @@
     <section class="bot">
         <footer>
             <section class="logo-footer">
-                <img src="/img/icons/logo.jpg" alt="">
+                <img src="/img/logo-rush.png"" alt="">
             </section>
             <div class="v-line"></div>
             <section class="quick-links">
