--- a/contenido/deportes/skate.html
+++ b/contenido/deportes/skate.html
@@ -92,7 +92,7 @@
     <section class="bot">
         <footer>
             <section class="logo-footer">
-                <img src="img/logo-rush.png" alt="">
+                <img src="/img/logo-rush.png" alt="">
             </section>
             <div class="v-line"></div>
             <section class="quick-links">
