--- a/categorias.html
+++ b/categorias.html
@@ -60,14 +60,13 @@
     <section class="bot">
         <footer>
             <section class="logo-footer">
-                <img src="img/logo-rush.png" alt="">
+                <img src="/img/logo-rush.png" alt="">
             </section>
             <div class="v-line"></div>
             <section class="quick-links">
                 <ul>
                     <li><a href="/contenido/acerca-de.html">Acerca de</a></li>
                     <li><a href="/contenido/contacto.html">Contactanos</a></li>
-                    <li><a href="/contenido/">Ejemplo 3</a></li>
                 </ul>
             </section>
             <div class="v-line"></div>
