--- a/contenido/busqueda.html
+++ b/contenido/busqueda.html
@@ -46,7 +46,7 @@
     <section class="bot">
         <footer>
             <section class="logo-footer">
-                <img src="/img/icons/logo.jpg" alt="">
+                <img src="/img/logo-rush.png"" alt="">
             </section>
             <div class="v-line"></div>
             <section class="quick-links">
