--- a/categorias.html
+++ b/categorias.html
@@ -15,7 +15,7 @@
     <section class="top">
         <header class="barra-main">
             <ul class="barra-nav">
-                <li class="barra-nav-elementos"><a href="index.html"><img src="img/logo-rush.png" alt="Logo" class="logo"></a></li>
+                <li class="barra-nav-elementos"><a href="/index.html"><img src="img/logo-rush.png" alt="Logo" class="logo"></a></li>
                 <li class="barra-nav-elementos"><a href="/contenido/deportes/concepto.html">Concepto</a></li>
                 <li class="barra-nav-elementos"><a href="/categorias.html">Categorias</a></li>
                 <li class="barra-nav-elementos bridge"><a href="/contenido/busqueda.html"><img src="img/icons/search.png" alt="Icono-Buscar" class="nav-button"></a></li>
