--- a/contenido/deportes/concepto.html
+++ b/contenido/deportes/concepto.html
@@ -17,8 +17,8 @@
                 <li class="barra-nav-elementos"><a href="/index.html"><img src="/img/logo-rush.png" alt="Logo" class="logo"></a></li>
                 <li class="barra-nav-elementos"><a href="/contenido/concepto.html">Concepto</a></li>
                 <li class="barra-nav-elementos"><a href="/categorias.html">Categorias</a></li>
-                <li class="barra-nav-elementos bridge"><a href=""><img src="/img/icons/search.png" alt="Icono-Buscar" class="nav-button"></a></li>
-                <li class="barra-nav-elementos"><a href=""><img src="/img/icons/user.png" alt="Icono-Login" class="nav-button"></a></li>
+                <li class="barra-nav-elementos bridge"><a href="/contenido/busqueda.html"><img src="/img/icons/search.png" alt="Icono-Buscar" class="nav-button"></a></li>
+                <li class="barra-nav-elementos"><a href="/contenido/login.html"><img src="/img/icons/user.png" alt="Icono-Login" class="nav-button"></a></li>
             </ul>
         </header>
     </section>
