skydiving update + fixes

--- a/contenido/busqueda.html
+++ b/contenido/busqueda.html
@@ -18,7 +18,7 @@
         <header class="barra-main">
             <ul class="barra-nav">
                 <li class="barra-nav-elementos"><a href="/index.html"><img src="/img/logo-rush.png" alt="Logo" class="logo"></a></li>
-                <li class="barra-nav-elementos"><a href="/contenido/concepto.html">Concepto</a></li>
+                <li class="barra-nav-elementos"><a href="/contenido/deportes/concepto.html">Concepto</a></li>
                 <li class="barra-nav-elementos"><a href="/categorias.html">Categorias</a></li>
                 <li class="barra-nav-elementos bridge"><a href="/contenido/busqueda.html"><img src="/img/icons/search.png" alt="Icono-Buscar" class="nav-button"></a></li>
                 <li class="barra-nav-elementos"><a href="/contenido/login.html"><img src="/img/icons/user.png" alt="Icono-Login" class="nav-button"></a></li>
@@ -37,7 +37,7 @@
                 </a>
             </div>
         </div>
-        <br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br>    
     </section>
 
     <!-- Pie de Página -->
