--- a/contenido/login.html
+++ b/contenido/login.html
@@ -26,7 +26,7 @@
     <!-- Sección de Contenido -->
     <section class="contenedor">
         <br><br><br><br><br><br><br><br><br><br>
-        <form class="inicio-registro">
+        <form class="inicio-registro" action="/contenido/perfil.html">
 
             <h2 id="Login">Inicio de Sesión</h2>
                 <div class="contenedor-inicio">
@@ -50,7 +50,7 @@
                 </div>
         </form>    
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <form class="inicio-registro">
+        <form class="inicio-registro">
 
                 <h2 id="Login2">Registro</h2>
                     <div class="contenedor-inicio">
@@ -85,7 +85,7 @@
                         <p class="p-login">¿Ya tienes cuenta? <a class="link" href="#Login">Iniciar Sesion</a></p>
                                    
                     </div>
-            </form> 
+        </form> 
     </section>
     
     <!-- Pie de Página -->
