--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -31,8 +31,10 @@
         left: 300px;
     }
 
-    .content3 textarea{
-        text-align: center;
+    .content3{
+        display: block;
+        margin-left: 30%;
+        margin-right: 40%;
     }
 
     .content3 h4{
@@ -104,7 +106,7 @@
 
 
             
-                <label for="celular">celular</label>
+                <label for="celular">Celular</label>
                 <input id="celular" name="celular" type="text" placeholder="Ingrese su numero">
 
                 <label for="Direccion">Direccion</label>
