--- a/contenido/deportes/surf.html
+++ b/contenido/deportes/surf.html
@@ -109,7 +109,7 @@
     <section class="bot">
         <footer>
             <section class="logo-footer">
-                <img src="/img/icons/logo.jpg" alt="">
+                <img src="/img/logo-rush.png" alt="">
             </section>
             <div class="v-line"></div>
             <section class="quick-links">
