fixes + motocross revamp

--- a/contenido/deportes/motocross.html
+++ b/contenido/deportes/motocross.html
@@ -100,8 +100,7 @@
         width: 300px;
         height: 250px;
     }
-
-</style>
+    </style>
 <body>
 
     <!-- DOCUMENTO BASE, POR FAVOR MODIFICAR SI VEN ALGO QUE NO ESTA BIEN -->
@@ -122,66 +121,59 @@
     <section class="content">
         <img src="/img/banners/motocross-banner-large.png" alt="" class="banner">
         <div class="banner-block-main"><br><h1>Motocross</h1><br></div>
-        <img src="/img/cham.jpg" alt="">
+        <img src="/img/cham.jpg" alt="" class="cover-img">
         <p>
             El motocross es una modalidad de motociclismo que consiste en competir por circuitos caracterizados por ser terrenos agrestes; los cuales se distinguen por ser circuitos definidos y marcados, poniendo a prueba, no sólo la motocicleta y su velocidad, sino su destreza al momento de controlar la máquina ante las irregularidades del camino.
 
             Este tipo de competencias demanda mucha resistencia física del piloto, pues debe enfrentarse a terrenos muy ásperos sin la comodidad de ir sentado, lo que ocasiona un trabajo constante de todos los músculos, en especial de la espalda y los brazos. Al mismo tiempo, las motos de carrera están diseñadas para ser manejadas casi siempre de pie, debido a sus largas y blandas suspensiones, ruedas de tacos para asegurar el agarre y asiento muy altos.
 
             Ahora, hagamos un recorrido por las competencias más importantes alrededor del mundo, incluyendo las carreras de motocross de mujeres.
-        </p>
-    </section>
+        </p>        
 
-    <section class="Camp">
-        <h1>
-            Campeonatos
-        </h1>
-    </section>
-
-    <section class="content2">
-        <section class="card">
-            <img src="/img/ANA.jpg" alt="">
-            <h4>Campeonato de Motocross AMA</h4>
-            <p>
-                Este torneo se desarrolla en doce rondas, que se llevan a cabo en diferentes pistas de Estados Unidos. Existen tres categorías, la clase 250 de motocross para 0–125 cc de dos tiempos o 150–250 cc de cuatro tiempos de maquinaria, la clase 450 de motocross para 150–250 cc de dos tiempos o 251–450 cc cuatro tiempos de maquinaria y la categoría femenina.
-            </p>
+        <div class="banner-block-main"><br><h1>Campeonatos</h1><br></div>
+        <section class="contenido">
+            <article class="articulo">
+                <img src="/img/ANA.jpg" alt="">
+                <h4>Campeonato de Motocross AMA</h4>
+                <p>
+                    Este torneo se desarrolla en doce rondas, que se llevan a cabo en diferentes pistas de Estados Unidos. Existen tres categorías, la clase 250 de motocross para 0–125 cc de dos tiempos o 150–250 cc de cuatro tiempos de maquinaria, la clase 450 de motocross para 150–250 cc de dos tiempos o 251–450 cc cuatro tiempos de maquinaria y la categoría femenina.
+                </p>
+            </article>
+    
+            <article class="articulo">
+                <img src="/img/super.jpg" alt="">
+                <h4>Supercross (Monster Energy AM Supercross Championship)</h4>
+                <p>
+                    Monster Energy AMA Supercross es la temporada de estadios en la que los pilotos de motos todoterreno ponen a prueba sus habilidades técnicas y su precisión, compitiendo en 17 rondas en pistas diseñadas a medida para ganar puntos para el SuperMotocross World ChampionshipTM.
+                </p>
+            </article>
+    
+            <article class="articulo">
+                <img src="/img/Britanico.jpg" alt="">
+                <h4>Campeonato Británico de Motocross</h4>
+                <p>
+                    Es la principal competición de este deporte en el Reino Unido, teniendo como categorías MX1 y MX2. MX1 es para 250 cc a 450 cc (cuatro tiempos) y MX2 para 175 cc a 250 cc motocicletas de cuatro tiempos.
+                </p>
+            </article>
         </section>
 
-        <section class="card">
-            <img src="/img/Britanico.jpg" alt="">
-            <h4>Campeonato Británico de Motocross</h4>
-            <p>
-                Es la principal competición de este deporte en el Reino Unido, teniendo como categorías MX1 y MX2. MX1 es para 250 cc a 450 cc (cuatro tiempos) y MX2 para 175 cc a 250 cc motocicletas de cuatro tiempos.
-            </p>
-        </section>
+        <div class="banner-block-main"><br><h1>Corredores</h1><br></div>
 
-        <section class="card">
-            <img src="/img/super.jpg" alt="">
-            <h4>Supercross (Monster Energy AM Supercross Championship)</h4>
-            <p>
-                Monster Energy AMA Supercross es la temporada de estadios en la que los pilotos de motos todoterreno ponen a prueba sus habilidades técnicas y su precisión, compitiendo en 17 rondas en pistas diseñadas a medida para ganar puntos para el SuperMotocross World ChampionshipTM.
-            </p>
-        </section>
+        <section class="contenido">
+            <article class="articulo">
+                <img src="/img/Adam.jpg" alt="">
+                <h4>ADAM CIANCIARULO</h4>
+            </article>
 
-    </section>
-    <section class="content3">
-        <section class="Corredores">
-            <h1>Corredores</h1>
-        </section>
+            <article class="articulo">
+                <img src="/img/Eli.jpg" alt="">
+                <h4>ELI TOMAC</h4>
+            </article>
 
-        <section class="card2">
-            <img src="/img/Adam.jpg" alt="">
-            <h4>ADAM CIANCIARULO</h4>
-        </section>
-
-        <section class="card2">
-            <img src="/img/Eli.jpg" alt="">
-            <h4>ELI TOMAC</h4>
-        </section>
-
-        <section class="card2">
-            <img src="/img/Austin.jpg" alt="">
-            <h4>AUSTIN FORKNER</h4>
+            <article class="articulo">
+                <img src="/img/Austin.jpg" alt="">
+                <h4>AUSTIN FORKNER</h4>
+            </article>
         </section>
 
     </section>
