--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -5,72 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Rush Evo</title>
+    <script src="/index.js"></script>
+    <title>Contactanos</title>
 </head>
-<style type="text/css">
-    .content h1{
-        font-size: 40px;
-        text-transform: uppercase;
-    }
 
-    .content p{
-        font-size: 20px;
-        text-align: center;
-        color: yellow;
-    }
 
-    .content2 h2{
-        font-size: 30px;
-        text-transform: uppercase;
-        padding-top: 70px;
-        text-align: center;
-    }
-
-    .content2 p{
-        color: white;
-        left: 300px;
-    }
-
-    .content3{
-        display: block;
-        margin-left: 30%;
-        margin-right: 40%;
-    }
-
-    .content3 h4{
-        padding-top: 40px;
-        text-align: center;
-    }
-
-    .content4 h4{
-        padding-top: 20px;
-    }
-
-    .content4 form{
-        padding-top: 30px;
-        padding-left: 5px;
-    }
-
-    .content5 p{
-        color: white;
-        text-align: center;
-    }
-</style>
-
-<body>
+<body onload="ImprimirHeaderFooter()">
 
     <!-- DOCUMENTO BASE, POR FAVOR MODIFICAR SI VEN ALGO QUE NO ESTA BIEN -->
     <!-- Barra de Inicio -->
-    <section class="top">
-        <header class="barra-main">
-            <ul class="barra-nav">
-                <li class="barra-nav-elementos"><a href="/index.html"><img src="/img/logo-rush.png" alt="Logo" class="logo"></a></li>
-                <li class="barra-nav-elementos"><a href="/contenido/concepto.html">Concepto</a></li>
-                <li class="barra-nav-elementos"><a href="/categorias.html">Categorias</a></li>
-                <li class="barra-nav-elementos bridge"><a href="/contenido/busqueda.html"><img src="/img/icons/search.png" alt="Icono-Buscar" class="nav-button"></a></li>
-                <li class="barra-nav-elementos"><a href="/contenido/login.html"><img src="/img/icons/user.png" alt="Icono-Login" class="nav-button"></a></li>
-            </ul>
-        </header>
+    <section class="top" id="top">
     </section>
 
     <!-- Sección de Contenido -->
@@ -137,27 +81,8 @@
 
     
     <!-- Pie de Página -->
-    <section class="bot">
-        <footer>
-            <section class="logo-footer">
-                <img src="/img/logo-rush.png"" alt="">
-            </section>
-            <div class="v-line"></div>
-            <section class="quick-links">
-                <ul>
-                    <li><a href="/contenido/acerca-de.html">Acerca de</a></li>
-                    <li><a href="/contenido/contacto.html">Contactanos</a></li>
-                </ul>
-            </section>
-            <div class="v-line"></div>
-            <section class="sponsors">
-                <ul>
-                    <li>Sponsored by...</li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                </ul>   
-            </section>
-        </footer>
+    <section class="bot" id="bot">
     </section>
+    
 </body>
 </html>
