--- a/contenido/deportes/concepto.html
+++ b/contenido/deportes/concepto.html
@@ -5,22 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Rush Evo</title>
+    <script src="/index.js"></script>
+    <title>Concepto</title>
 </head>
-<body>
+<body onload="ImprimirHeaderFooter()">
 
     <!-- DOCUMENTO BASE, POR FAVOR MODIFICAR SI VEN ALGO QUE NO ESTA BIEN -->
     <!-- Barra de Inicio -->
-    <section class="top">
-        <header class="barra-main">
-            <ul class="barra-nav">
-                <li class="barra-nav-elementos"><a href="/index.html"><img src="/img/logo-rush.png" alt="Logo" class="logo"></a></li>
-                <li class="barra-nav-elementos"><a href="/contenido/concepto.html">Concepto</a></li>
-                <li class="barra-nav-elementos"><a href="/categorias.html">Categorias</a></li>
-                <li class="barra-nav-elementos bridge"><a href="/contenido/busqueda.html"><img src="/img/icons/search.png" alt="Icono-Buscar" class="nav-button"></a></li>
-                <li class="barra-nav-elementos"><a href="/contenido/login.html"><img src="/img/icons/user.png" alt="Icono-Login" class="nav-button"></a></li>
-            </ul>
-        </header>
+    <section class="top" id="top">
     </section>
 
     <!-- Sección de Contenido -->
