--- a/contenido/crud.html
+++ b/contenido/crud.html
@@ -37,77 +37,77 @@
                     <td>Página principal.</td>
                     <td><a href="/index.html">index.html</a></td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button" value="Eliminar""></td>
+                    <td><input type="button" value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>6</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>7</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>8</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>9</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>10</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
                 <tr>
                     <td>11</td>
                     <td>b</td>
                     <td>c</td>
                     <td><input type="button" value="Editar"></td>
-                    <td><input type="button"value="Eliminar""></td>
+                    <td><input type="button"value="Eliminar"></td>
                 </tr>
             </table>
         </div>
