--- a/contenido/login.html
+++ b/contenido/login.html
@@ -16,24 +16,26 @@
     <!-- Sección de Contenido -->
     <section class="contenedor">
         <br><br><br><br><br><br><br><br><br><br>
-        <form class="inicio-registro" action="@{/login}" method="post">
+        <form class="inicio-registro" action="" method="post">
 
             <h2 id="Login">Inicio de Sesión</h2>
                 <div class="contenedor-inicio">
                     <div class="input-contenedor">
                         <img src="/img/icons/correo-electronico.png" id="iconos"> 
-                        <input id="input-login" type="email" placeholder="Correo Electronico">                
+                        <input id="mail"  type="email" placeholder="Correo Electronico">                
                      </div>
                      <div class="input-contenedor">
                         <img src="/img/icons/candado-bloqueado.png" id="iconos"> 
-                        <input id="input-login" type="password" placeholder="Contraseña">                                        
+                        <input id="pass"  type="password" placeholder="Contraseña">                                        
                      </div>
-                     <input type="submit" value="Entrar" class="button-login">
+                     <input type="submit" value="Entrar" class="button-login" onclick="capturar()">
                         <hr>
                     <p class="p-login">¿No tienes cuenta? <a class="link" href="#Login2">Registrate</a></p>
                                
                 </div>
         </form>    
+
+        
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <form class="inicio-registro">
 
