--- a/contenido/perfil.html
+++ b/contenido/perfil.html
@@ -25,7 +25,7 @@
 
     <!-- Sección de Contenido -->
     <section class="content">
-        <h1>Perfil</h1>
+        <h1>Bienvenido a tu perfil, ____!</h1>
         <div class="contenido-perfil">
 
             <section class="foto-perfil">
@@ -35,41 +35,27 @@
             <section class="descripcion-perfil">
                 <form action="">
                     <div class="contenedor">
-                        <label for="" class="">Nombre</label>
                         <div>
-                            <input class="" placeholder="Nombre">
+                            <label for="" class="">Nombre</label><br>
+                            <input class="" type="text" placeholder="Nombre" id="nombre">
                         </div>
-                        <label for="" class=""> Correo electronico </label>
                         <div>
-                            <input class="" placeholder="Correo Electronico">
+                            <label for="" class="">Apellido</label><br>
+                            <input class="" type="text" placeholder="Apellido" id="apellido">
                         </div>
-                    </div>
-                    <div>
-                        <label for="" class="">Edad</label>
-                    </div>
-                    <div>
-                        <input class="" placeholder="Edad">
-                    </div>
-                </form>
-            </section>
-
-            <section class="descripcion-perfil">
-                <form action="">
-                    <div class="contenedor">
-                        <label for="" class="">Apellido</label>
                         <div>
-                            <input class="" placeholder="Apellido">
+                            <label for="" class="">Correo electronico</label><br>
+                            <input class="" type="email" placeholder="Correo Electronico" id="email">
                         </div>
-                        <label for="" class=""> N°Seguro</label>
                         <div>
-                            <input class="" placeholder="N°Seguro">
+                            <label for="" class="">Fecha de Nacimiento</label><br>
+                            <input class="" type="date" placeholder="" id="fecha_nac">
                         </div>
-                    </div>
-                    <div>
-                        <label for="" class="">Fecha de nacimiento</label>
-                    </div>
-                    <div>
-                        <input class="" placeholder="Fecha de nacimiento">
+                        <!-- <div>
+                            <label for="" class="">Correo electronico </label><br>
+                            <input class="" type="" placeholder="Correo Electronico" id="email">
+                        </div> -->
+                        <input type="submit" value="Actualizar Datos" onclick="">
                     </div>
                 </form>
             </section>
