--- a/contenido/login.html
+++ b/contenido/login.html
@@ -16,22 +16,21 @@
     <!-- Sección de Contenido -->
     <section class="contenedor">
         <br><br><br><br><br><br><br><br><br><br>
-        <form class="inicio-registro" action="">
-
+        <form class="inicio-registro" action="" onsubmit="capturar(event)">
             <h2 id="Login">Inicio de Sesión</h2>
-                <div class="contenedor-inicio">
-                    <div class="input-contenedor">
-                        <img src="/img/icons/correo-electronico.png" id="iconos"> 
-                        <input id="email" type="email" placeholder="Correo Electronico">                
-                     </div>
-                     <div class="input-contenedor">
-                        <img src="/img/icons/candado-bloqueado.png" id="iconos"> 
-                        <input id="password"  type="password" placeholder="Contraseña">                                        
-                     </div>
-                     <input type="submit" value="Entrar" class="button-login" onclick="capturar()">
-                        <hr>
-                    <p class="p-login">¿No tienes cuenta? <a class="link" href="#Login2">Registrate</a></p>                  
+            <div class="contenedor-inicio">
+                <div class="input-contenedor">
+                    <img src="/img/icons/correo-electronico.png" id="iconos"> 
+                    <input id="email_login" type="email" placeholder="Correo Electronico">                
                 </div>
+                <div class="input-contenedor">
+                    <img src="/img/icons/candado-bloqueado.png" id="iconos"> 
+                    <input id="password_login"  type="password" placeholder="Contraseña">                                        
+                </div>
+                <input type="submit" value="Entrar" class="button-login">
+                <hr>
+                <p class="p-login">¿No tienes cuenta? <a class="link" href="#Login2">Registrate</a></p>                  
+            </div>
         </form>    
 
         
