--- a/contenido/crud/crud.html
+++ b/contenido/crud/crud.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Proyecto1-X-Ports/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="crud.css">
     <script src="/index.js"></script>
     <title>Rush Evo</title>
@@ -74,7 +74,7 @@
                       <div class="col-md-12">
                         <div class="form-group">
                           <a href="#" onclick="GuardarUsuario()" class="button add">Procesar</a><br>
-                          <a href="#" onclick="ActualizarProducto()" class="button update">Actualizar</a>
+                          <a href="#" onclick="ActualizarUsuario()" class="button update">Actualizar</a>
                         </div>
                       </div>
                   </form>
@@ -109,7 +109,7 @@
                   <form action="" id="frmProductos" class="inputs">
                     <div class="col-md-6">
                       <div class="form-group">
-                        <label for="">ID Pagine</label>
+                        <label for="">ID Pagina</label>
                         <input type="text" name="id_pag" id="id_pag" class="form-control">
                         <input type="hidden" name="id_pag" id="id_pag">
                       </div>
