--- a/contenido/crud/crud.html
+++ b/contenido/crud/crud.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="crud.css">
-    <title>Rush Evo</title>
+    <title>CRUD</title>
 </head>
 <body onload="ImprimirHeaderFooter(); ObtenerUsuarios(); ObtenerActiculos()">
 
@@ -147,7 +147,7 @@
                           <thead>
                             <tr>
                               <th>Accion</th>
-                              <th>id</th>
+                              <th>Id</th>
                               <th>Nombre de Página</th>
                               <th>Descripción</th>
                               <th>Link</th>
@@ -166,7 +166,7 @@
             
         </div>
     </section>
-    
+
     <!-- Pie de Página -->
     <section class="bot" id="bot">
     </section>
