--- a/contenido/login.html
+++ b/contenido/login.html
@@ -31,7 +31,7 @@
                         </div>
                         <input type="submit" id="loginSubmit" value="Entrar" class="button-login">
                         <hr>
-                        <p class="p-login">¿No tienes cuenta? <a class="link" data-target="#registro">Registrarse</a></p>                  
+                        <p class="p-login">¿No tienes cuenta? <a class="option link" data-target="#registro">Registrarse</a></p>                  
                     </div>
                 </form> 
             </div>
@@ -74,7 +74,7 @@
                              <p class="p-login">Al registrarte, aceptas nuestras Condiciones de uso y Políticas de
                                 privacidad.</p>
                                 <hr>
-                            <p class="p-login">¿Ya tienes cuenta? <a class="link" href="#Login">Iniciar Sesion</a></p>
+                            <p class="p-login">¿Ya tienes cuenta? <a class="option link" data-target="#sesion">Iniciar Sesion</a></p>
      
                         </div>
             </form> 
