Co-authored-by: AmmhirArath <AmmhirArath@users.noreply.github.com> Co-authored-by: federicot2 <federicot2@users.noreply.github.com>

--- a/contenido/acerca-de.html
+++ b/contenido/acerca-de.html
@@ -19,12 +19,13 @@
         <div class="banner-block-main">
             <br><h1>Acerca del proyecto</h1><br>
         </div>
-        <div class="info">
-            <p>Los deportes extremos como dice su nombre son deportes que son muy riesgosos de practicar, sin embargo lo que engancha a las personas de practicarlos es la emocion que provocan ellos. <br>
-                Dentro de esta pagina queremos mostrar y describir lo que quiere demostrar nuestro proyecto. <br>
-                Nuestro proyecto esta enfocado en los deportes extremos o deportes riesgosos, queremos brindar informacion educativa a las personas sobre los deportes ya que dentro de la sociedad tienen un gran impacto psicologico a las personas. <br>
-                El proyecto RUSH EVO es un banco de informacion para las personas que desean buscar deportes extremos que les interesen, dentro del proyecto se explicaran los deportes mas conocidos de esta categoria, aparte de curiosidades sobre los deportes. <br>
-            </p>
+        <p class="parrafo">Los deportes extremos como dice su nombre son deportes que son muy riesgosos de practicar, sin embargo lo que engancha a las personas de practicarlos es la emocion que provocan ellos.
+            Dentro de esta pagina queremos mostrar y describir lo que quiere demostrar nuestro proyecto.
+        </p>
+        <p class="parrafo"></p>
+            Nuestro proyecto esta enfocado en los deportes extremos o deportes riesgosos, queremos brindar informacion educativa a las personas sobre los deportes ya que dentro de la sociedad tienen un gran impacto psicologico a las personas.
+            El proyecto RUSH EVO es un banco de informacion para las personas que desean buscar deportes extremos que les interesen, dentro del proyecto se explicaran los deportes mas conocidos de esta categoria, aparte de curiosidades sobre los deportes.
+        </p>
             <br>
             <img src="/img/acerca-de.jpeg" alt="" class="acerca-de-imagen">
     </section>
