--- a/contenido/busqueda.html
+++ b/contenido/busqueda.html
@@ -19,10 +19,10 @@
     </section>
 
     <!-- Sección de Contenido -->
-    <section class="content" >
+    <section class=" content"  >
         <h1>BUSCADOR</h1>
         <input type="text" id="formulario" class="form-control my-2">
-        <button class="btn btn-info mb-2" id="boton">Buscar</button>
+        <button class="btn btn-info mb-2 expand" id="boton">Buscar</button>
         <div id="resultado" class="list-group">
             
         </div>
