--- a/contenido/login.html
+++ b/contenido/login.html
@@ -23,11 +23,11 @@
                     <div class="contenedor-inicio">
                         <div class="input-contenedor">
                             <img src="/img/icons/correo-electronico.png" id="iconos"> 
-                            <input id="email_login" type="email" placeholder="Correo Electronico" value="aaaaaa@aaaa.com">                
+                            <input id="email_login" type="email" placeholder="Correo Electronico">                
                         </div>
                         <div class="input-contenedor">
                             <img src="/img/icons/candado-bloqueado.png" id="iconos"> 
-                            <input id="password_login"  type="password" placeholder="Contraseña" value="abcde">                                        
+                            <input id="password_login"  type="password" placeholder="Contraseña">                                        
                         </div>
                         <input type="submit" id="loginSubmit" value="Entrar" class="button-login">
                         <hr>
