--- a/contenido/perfil.html
+++ b/contenido/perfil.html
@@ -37,23 +37,23 @@
                     <div class="contenedor">
                         <div>
                             <label for="" class="">Email</label><br>
-                            <input class="" type="text" id="email">
+                            <input class="" type="text" id="email" value="">
                         </div>
                         <div>
                             <label for="" class="">Contraseña</label><br>
-                            <input class="" type="text" id="password">
+                            <input class="" type="text" id="password" value="">
                         </div>
                         <div>
                             <label for="" class="">Nombre</label><br>
-                            <input class="" type="text" id="nombre">
+                            <input class="" type="text" id="nombre" value="">
                         </div>
                         <div>
                             <label for="" class="">Apellido</label><br>
-                            <input class="" type="text" id="apellido">
+                            <input class="" type="text" id="apellido" value="">
                         </div>
                         <div>
                             <label for="" class="">Fecha de Nacimiento</label><br>
-                            <input class="" type="date"  id="fecha_nac">
+                            <input class="" type="date"  id="fecha_nac" value="">
                         </div>
                         <!-- <div>
                             <label for="" class="">Correo electronico </label><br>
