cambios para presentacion final!!

--- a/contenido/acerca-de.html
+++ b/contenido/acerca-de.html
@@ -9,7 +9,7 @@
     <script src="/index.js"></script>
 </head>
 
-<body onload="ImprimirHeaderFooter()">
+<body onload="ImprimirHeaderFooter(); ObtenerImagenes();">
 
     <section class="top" id="top">
     </section>
@@ -26,8 +26,14 @@
             Nuestro proyecto esta enfocado en los deportes extremos o deportes riesgosos, queremos brindar informacion educativa a las personas sobre los deportes ya que dentro de la sociedad tienen un gran impacto psicologico a las personas.
             El proyecto RUSH EVO es un banco de informacion para las personas que desean buscar deportes extremos que les interesen, dentro del proyecto se explicaran los deportes mas conocidos de esta categoria, aparte de curiosidades sobre los deportes.
         </p>
+        <p class="parrafo">
+            Este proyecto fue hecho gracias a la colaboración de los integrantes del 1LS123 cuyos nombres son Diego Arroyo, Ammhir Carvajal, Joel Castillo, Ernesto Mora, Federico Tejedor y Ricardo Milord.
+        </p>
             <br>
-            <img src="/img/acerca-de.jpeg" alt="" class="acerca-de-imagen">
+        <div id="imagenArticulo">
+
+        </div>
+            
     </section>
     
     <!-- Pie de Página -->
