--- a/contenido/busqueda.html
+++ b/contenido/busqueda.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body onload="ImprimirHeaderFooter(); ObtenerActiculos();  filtrar()">
+<body onload="ImprimirHeaderFooter();  filtrar()">
 
     <!-- DOCUMENTO BASE, POR FAVOR MODIFICAR SI VEN ALGO QUE NO ESTA BIEN -->
     <!-- Barra de Inicio -->
@@ -22,7 +22,7 @@
     <section class=" content"  >
         <h1>BUSCADOR</h1>
         <input type="text" id="formulario" class="form-control my-2">
-        <button class="btn btn-info mb-2 expand" id="boton">Buscar</button>
+        <!-- <button class="btn btn-info mb-2 expand" id="boton">Buscar</button> -->
         <div id="resultado" class="list-group">
             
         </div>
